# snake-drl-agent

./: .gitignore  README.md  config.yml  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt  scores.txt
src/: config.py  constants.py
src/agent/: agents.py  dqn_model.py  models.py  replay_buffer.py  snake_agent.py
src/config/: config.py  config_manager.py  data_config.py  game_config.py  logs_config.py  model_config.py  training_config.py
src/environment/: snake_env.py
src/game/: board.py  colour.py  direction.py  env.py  food.py  game.py  game_ui.py  snake.py  snake_env.py  snake_game.py  snake_new.py  ui.py  ui_pygame.py
src/utils/: logger.py  utils.py
tests/: conftest.py  test_env.py  test_food.py  test_game.py  test_snake.py  test_snake_env.py  test_ui.py
